--- a/UIwork-3.html
+++ b/UIwork-3.html
@@ -79,8 +79,8 @@
 						</div>
 					</div>
 					<div class="col-sm-4 right">
-					<a href="UIwork-1.html" class="gallery__item">
-		                <img src="images/ui-1.png" class="images">
+					<a href="UIwork-4.html" class="gallery__item">
+		                <img src="images/ui_4.png" class="images">
 		                <p class="text--sm text--bold u-text-right">NEXT＞</p>
 		            </a>	
 				</div>
