--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 							<div class="wow fadeInLeftBig">
 								<h6 class="text--xs">Hello, my name is Wu,Xin-Qiao.</h6>
 								<h3 class="text--lg">ABOUT</h3>
-								<h6 class="text--xs">I am a  Visual Designer with 1 years of experience.<br>I am intending to change my career path be an UI/UX designer.
+								<h6 class="text--xs">I am a  UI Designer with 1 years of experience.<br>I am intending to change my career path be an UI/UX designer.
 								</h6>
 							</div>
 						</div>
@@ -118,8 +118,9 @@
 					          </h2>
 					          <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#myAccordion">
 					            <div class="accordion-body">
+					              <p>2022.04-Present<br>UI Designer in <a href="https://www.wundermanthompson.com/zh-tw/taipei">Wunderman Thompson</a></p>
 					              <p>2020.07-2021.07<br>Visual Designer in <a href="http://www.skyline-hotels.com.tw/tw/">SkyLine Hotel</a></p>
-					              <p>2019.10-now(side job)<br>Visual Designer in <a href="https://www.londonimg.tw">LondonImg</a></p>
+					              <p>2019.10-Present(side job)<br>Visual Designer in <a href="https://www.londonimg.tw">LondonImg</a></p>
 					              <P>2019.07-2019.08<br>Design Intern in <a href="http://outlookchina.net">OutlookChina</a></P>
 					            </div>
 					          </div>
