--- a/UIwork-5.html
+++ b/UIwork-5.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Xin-Qiao Design - MAZDA Certiified Website | Web Design</title>
+	<title>Xin-Qiao Design - MAZDA Certified Website | Web Design</title>
 	<meta name="description" content="Xin-Qiao Design,The website where displays of design works, including UI/UX Design, Graphic Design, Package Design and Film.">
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -65,7 +65,7 @@
 				<p class="text--sm text--bold"><a href="work.html" class="textme">＜BACK</a></p>
 				<div class="row">
 					<div class="col-sm-12">
-						<h3 class="text--sm text--underline">MAZDA Certiified Website | Web Design</h3>
+						<h3 class="text--sm text--underline">MAZDA Certified Website | Web Design</h3>
 						<div class="imgbox u-mb-12">
 							<div class="imgbox__inner imgbox__inner-1-24">
 								<div class="images" style="background-image: url(images/MAZDA-1.png);"></div>
