--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 							<div class="wow fadeInLeftBig">
 								<h6 class="text--xs">Hello, my name is Wu,Xin-Qiao.</h6>
 								<h3 class="text--lg">ABOUT</h3>
-								<h6 class="text--xs">I am a  UI Designer with 1 years of experience.<br>I am intending to change my career path be an UI/UX designer.
+								<h6 class="text--xs">I am a  UI Designer with 2 years of experience.<br>
 								</h6>
 							</div>
 						</div>
@@ -173,7 +173,7 @@
 			<div class="container footer-line clearfix">
 				<div class="row">
 					<div class="col-lg-6 col-sm-4">
-						<p class="text--xs text--bold"><a href="mailto:cherry870721@gmail.com" class="textme">MAIL TO ME ＞＞＞</a></p>
+						<p class="text--xs text--bold"><a href="mailto:carol.wu721@gmail.com" class="textme">MAIL TO ME ＞＞＞</a></p>
 					</div>
 					<div class="col-lg-3 col-sm-3">
 						<p class="text--xs">Taoyuan City,Taiwan</p>
