--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 			<div class="contact u-mt-48  wow pulse">
 				<div class="contact-box">
 					<div class="contact-inner">
-						<p class="text--lg"><a href="mailto:cherry870721@gmail.com" class="contacts-mail">cherry870721@gmail.com</a></p>
+						<p class="text--lg"><a href="mailto:carol.wu721@gmail.com" class="contacts-mail">carol.wu721@gmail.com</a></p>
 					</div>
 					<div class="contact-inner u-pull-left">
 						<p class="text--sm">Wu,Xin-Qiao</p>
@@ -86,7 +86,7 @@
 			<div class="container footer-line clearfix">
 				<div class="row">
 					<div class="col-lg-6 col-sm-4">
-						<p class="text--xs text--bold"><a href="mailto:cherry870721@gmail.com" class="textme">MAIL TO ME ＞＞＞</a></p>
+						<p class="text--xs text--bold"><a href="mailto:carol.wu721@gmail.com" class="textme">MAIL TO ME ＞＞＞</a></p>
 					</div>
 					<div class="col-lg-3 col-sm-3">
 						<p class="text--xs">Taoyuan City,Taiwan</p>
