--- a/work.html
+++ b/work.html
@@ -173,9 +173,14 @@
 						<div class="col-sm-6 u-mb-48">
 							<iframe class="work-video" src="https://www.youtube.com/embed/dYB5fPsZ_Nw?si=r8uew8LX4OoqWrF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
+						<div class="row">
 						<div class="col-sm-6 u-mb-48">
-							<iframe class="work-video" src="https://www.youtube.com/embed/4HzbQfA3Cfg?si=ohhQFmxTt0uPNqCI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="work-video" src="https://www.youtube.com/embed/cU4DzJrJMnM?si=HoNyqlDIJIOl-oc2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
+					</div>
+						<!--<div class="col-sm-6 u-mb-48">
+							<iframe class="work-video" src="https://www.youtube.com/embed/4HzbQfA3Cfg?si=ohhQFmxTt0uPNqCI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>-->
 					</div>
 					<div class="row">
 						<div class="col-sm-6 u-mb-48">
@@ -183,11 +188,6 @@
 						</div>
 						<div class="col-sm-6 u-mb-48">
 							<iframe class="work-video" src="https://www.youtube.com/embed/T1SdvpmuHgM?si=GH5cu9-w7zxjVU0e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-6 u-mb-48">
-							<iframe class="work-video" src="https://www.youtube.com/embed/cU4DzJrJMnM?si=HoNyqlDIJIOl-oc2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
@@ -201,7 +201,7 @@
 			<div class="container footer-line clearfix">
 				<div class="row">
 					<div class="col-lg-6 col-sm-4">
-						<p class="text--xs text--bold"><a href="mailto:cherry870721@gmail.com" class="textme">MAIL TO ME ＞＞＞</a></p>
+						<p class="text--xs text--bold"><a href="mailto:carol.wu721@gmail.com" class="textme">MAIL TO ME ＞＞＞</a></p>
 					</div>
 					<div class="col-lg-3 col-sm-3">
 						<p class="text--xs">Taoyuan City,Taiwan</p>
