--- a/UIwork-2.html
+++ b/UIwork-2.html
@@ -94,7 +94,7 @@
 			<div class="container footer-line clearfix">
 				<div class="row">
 					<div class="col-lg-6 col-sm-4">
-						<p class="text--xs text--bold"><a href="mailto:cherry870721@gmail.com" class="textme">MAIL TO ME ＞＞＞</a></p>
+						<p class="text--xs text--bold"><a href="mailto:carol.wu721@gmail.com" class="textme">MAIL TO ME ＞＞＞</a></p>
 					</div>
 					<div class="col-lg-3 col-sm-3">
 						<p class="text--xs">Taoyuan City,Taiwan</p>
