--- a/about.html
+++ b/about.html
@@ -93,9 +93,9 @@
 					          </h2>
 					          <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#myAccordion">
 					            <div class="accordion-body">
-					            	<p>NAME:Wu,Xin-Qiao</p>
-									<p>BIRTHDAY:1998.07.21</p>
-									<p>COUNTRY:Taiwan</p>
+					            	<p>NAME: Wu,Xin-Qiao</p>
+									<p>BIRTHDAY: 1998.07.21</p>
+									<p>COUNTRY: Taiwan</p>
 					            </div>
 					          </div>
 					        </div>		
@@ -118,9 +118,8 @@
 					          </h2>
 					          <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#myAccordion">
 					            <div class="accordion-body">
-					              <p>2022.04-Present<br>UI Designer in <a href="https://www.wundermanthompson.com/zh-tw/taipei">Wunderman Thompson</a></p>
+					              <p>2022.04-Present<br>UI Designer in <a href="https://www.wundermanthompson.com/zh-tw/taipei">VML</a></p>
 					              <p>2020.07-2021.07<br>Visual Designer in <a href="http://www.skyline-hotels.com.tw/tw/">SkyLine Hotel</a></p>
-					              <p>2019.10-Present(side job)<br>Visual Designer in <a href="https://www.londonimg.tw">LondonImg</a></p>
 					              <P>2019.07-2019.08<br>Design Intern in <a href="http://outlookchina.net">OutlookChina</a></P>
 					            </div>
 					          </div>
@@ -132,8 +131,8 @@
 					          </h2>
 					          <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#myAccordion">
 					            <div class="accordion-body">
-					              <p>MASTER:Illustrator, Photoshop, InDesign,After Effect, Premiere, Sublime, Figma, Sketch, XD</p>
-					              <p>KNOW:HTML, CSS, Bootstrap5, RWD web</p>
+					              <p>MASTER: Illustrator, Photoshop, InDesign,After Effect, Premiere, Sublime, Figma, Sketch, XD</p>
+					              <p>KNOW: HTML, CSS, Bootstrap5, RWD website</p>
 					            </div>
 					          </div>
 					        </div>
