--- a/work.html
+++ b/work.html
@@ -184,10 +184,10 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-6 u-mb-48">
-							<iframe class="work-video" src="https://www.youtube.com/embed/CC-MKQfhh9Q?si=B1ugcyKxW0uEGn-u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="work-video" src="https://www.youtube.com/embed/ojxbr1Ccrnc?si=MNyg76qDakS9Ppf7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 						<div class="col-sm-6 u-mb-48">
-							<iframe class="work-video" src="https://www.youtube.com/embed/T1SdvpmuHgM?si=GH5cu9-w7zxjVU0e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="work-video" src="https://www.youtube.com/embed/dcUi2Q4f-Nk?si=b8JbHlvVm974tzFa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
