--- a/about.html
+++ b/about.html
@@ -71,9 +71,9 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="wow fadeInLeftBig">
-								<h6 class="text--xs">Hello, my name is Wu,Xin-Qiao.</h6>
+								<h6 class="text--xs">Hello, my name is Carol.</h6>
 								<h3 class="text--lg">ABOUT</h3>
-								<h6 class="text--xs">I am a  UI Designer with 2 years of experience.<br>
+								<h6 class="text--xs">I am a  UI Designer with 3 years of experience.<br>
 								</h6>
 							</div>
 						</div>
@@ -118,7 +118,7 @@
 					          </h2>
 					          <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#myAccordion">
 					            <div class="accordion-body">
-					              <p>2022.04-Present<br>UI Designer in <a href="https://www.wundermanthompson.com/zh-tw/taipei">VML</a></p>
+					              <p>2022.04-Present<br>UI Designer in <a href="https://www.vml.com">VML</a></p>
 					              <p>2020.07-2021.07<br>Visual Designer in <a href="http://www.skyline-hotels.com.tw/tw/">SkyLine Hotel</a></p>
 					              <P>2019.07-2019.08<br>Design Intern in <a href="http://outlookchina.net">OutlookChina</a></P>
 					            </div>
