--- a/work.html
+++ b/work.html
@@ -70,6 +70,18 @@
 					<h3 class="text--sm text--underline u-mt-48">UI/UX</h3>
 					<div class="row">
 						<div class="col-sm-6">
+							<a href="UIwork-6.html" class="gallery__item">
+	                		<img src="images/ui-6.png" class="images">
+	            			</a>
+						</div>
+						<div class="col-sm-6">
+							<a href="UIwork-7.html" class="gallery__item">
+	                		<img src="images/ui-7.png" class="images">
+	            			</a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6">
 							<a href="UIwork-4.html" class="gallery__item">
 	                		<img src="images/ui_4.png" class="images">
 	            			</a>
@@ -171,7 +183,7 @@
 					<h3 class="text--sm text--underline u-mt-24">FILM</h3>
 					<div class="row">
 						<div class="col-sm-6 u-mb-48">
-							<iframe class="work-video" src="https://www.youtube.com/embed/dYB5fPsZ_Nw?si=r8uew8LX4OoqWrF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="work-video" src="https://www.youtube.com/embed/dYB5fPsZ_Nw?si=Apc2b-FceYIvJ5Y8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 						<div class="row">
 						<div class="col-sm-6 u-mb-48">
