--- a/UIwork-6.html
+++ b/UIwork-6.html
@@ -78,11 +78,8 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-6 u-mb-48">
-							<iframe class="work-video" src="https://www.youtube.com/embed/ojxbr1Ccrnc?si=MNyg76qDakS9Ppf7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div>
-						<div class="col-sm-6 u-mb-48">
-							<iframe class="work-video" src="https://www.youtube.com/embed/dcUi2Q4f-Nk?si=b8JbHlvVm974tzFa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<div class="col-sm-12 u-mb-48">
+							<iframe class="work-video-chilldpage" src="https://www.youtube.com/embed/ojxbr1Ccrnc?si=MNyg76qDakS9Ppf7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</div>
 					<div class="col-sm-4 right">
