--- a/UIwork-6.html
+++ b/UIwork-6.html
@@ -74,12 +74,7 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-12 u-mb-48">
-							<iframe class="work-video-chilldpage" src="https://youtu.be/SzR44ZL5ogM?si=B14OiEr7Z8n0mBUe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-12 u-mb-48">
-							<iframe class="work-video-chilldpage" src="https://www.youtube.com/embed/ojxbr1Ccrnc?si=MNyg76qDakS9Ppf7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="work-video-chilldpage" src="https://youtu.be/SzR44ZL5ogM?si=rlsrLqgXCGciGzGt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</div>
 					<div class="col-sm-4 right">
