--- a/work.html
+++ b/work.html
@@ -70,6 +70,18 @@
 					<h3 class="text--sm text--underline u-mt-48">UI/UX</h3>
 					<div class="row">
 						<div class="col-sm-6">
+							<a href="UIwork-8.html" class="gallery__item">
+	                		<img src="images/ui-8.png" class="images">
+	            			</a>
+						</div>
+						<div class="col-sm-6">
+							<a href="UIwork-9.html" class="gallery__item">
+	                		<img src="images/ui-9.png" class="images">
+	            			</a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-6">
 							<a href="UIwork-6.html" class="gallery__item">
 	                		<img src="images/ui-6.png" class="images">
 	            			</a>
