--- a/work.html
+++ b/work.html
@@ -70,13 +70,13 @@
 					<h3 class="text--sm text--underline u-mt-48">UI/UX</h3>
 					<div class="row">
 						<div class="col-sm-6">
-							<a href="UIwork-8.html" class="gallery__item">
-	                		<img src="images/ui-8.png" class="images">
+							<a href="UIwork-10.html" class="gallery__item">
+	                		<img src="images/ui-10.png" class="images">
 	            			</a>
 						</div>
 						<div class="col-sm-6">
-							<a href="UIwork-9.html" class="gallery__item">
-	                		<img src="images/ui-9.png" class="images">
+							<a href="UIwork-4.html" class="gallery__item">
+	                		<img src="images/ui-4.png" class="images">
 	            			</a>
 						</div>
 					</div>
@@ -93,12 +93,17 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-6">
-							<a href="UIwork-4.html" class="gallery__item">
-	                		<img src="images/ui_4.png" class="images">
+						<div class="col-sm-4">
+							<a href="UIwork-9.html" class="gallery__item">
+	                		<img src="images/ui-9.png" class="images">
 	            			</a>
 						</div>
-						<div class="col-sm-6">
+						<div class="col-sm-4">
+							<a href="UIwork-8.html" class="gallery__item">
+	                		<img src="images/ui-8.png" class="images">
+	            			</a>
+						</div>
+						<div class="col-sm-4">
 							<a href="UIwork-5.html" class="gallery__item">
 	                		<img src="images/ui-5.png" class="images">
 	            			</a>
